# wsl-shortcut-creator

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
docs/: development.md  installation.md  usage.md
docs/releases/: v1.1.1.md
scripts/: build.ps1  run_app.ps1  run_tests.ps1
src/wsl_shortcut_creator/: __init__.py  __main__.py
src/wsl_shortcut_creator/config/: __init__.py  settings.py
src/wsl_shortcut_creator/gui/: custom_app_dialog.py  main_window.py  ui_constants.py
tests/: conftest.py
tests/test_gui/: test_main_window.py
